feat(test): add BDD support and demo for Bracer Quest evaluation